# ProjectZ

./: .gitignore  2qa  CMakeLists.txt  Common.h  README.md
src/: Common.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  World.cpp  World.h  main.cpp
